# django-sports-app

./: .gitignore  README.md  clean-migrations.sh  pyproject.toml
api/: serializers.py  urls.py  views.py
sports_news_app/: admin.py  apps.py  models.py  permission.py  urls.py  views.py
sports_news_app/migrations/: 0001_initial.py  0002_comment.py  0003_alter_author_options_alter_article_author_and_more.py  0004_alter_comment_author_alter_tag_name_alter_tag_slug.py  0005_historicaltag_historicalcomment_historicalauthor_and_more.py  0006_alter_article_options_alter_author_user.py  0007_alter_author_user.py  0008_alter_article_tags.py  0009_category_historicalcategory_article_category_and_more.py
sports_news_app/templates/: 404.html  base.html  pagination.html
sports_news_app/templates/sports_news/: index.html
templates/: 404.html  base.html  base_with_navigation.html
templates/sports_news/: article.html  articles_by_category.html  articles_by_tag.html  index.html
templates/sports_news/components/: article_card.html  category_navigation.html  comment.html  pagination-next-previous.html
templates/sports_news_app/: article_form.html
templates/users/: login.html  logout.html  profile.html  register.html
users/: views.py
website/: settings.py  urls.py
